// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast Snapshots tests should match snapshot when closed 1`] = `
<body>
  <div
    alfa-portal-container=""
  />
  <div />
</body>
`;

exports[`Toast Snapshots tests should match snapshot when open 1`] = `
<body>
  <div />
  <div
    alfa-portal-container=""
  >
    <div
      aria-atomic="true"
      aria-live="assertive"
      class="component component fixed toastPlate"
      role="alert"
      style="z-index: 1000;"
    >
      <div
        class="wrapper"
      >
        <div
          class="contentWrapper"
        >
          <div
            class="content"
          >
            <div
              class="contentTitle"
            >
              <div
                class="children"
              >
                text
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Toast Snapshots tests should math snapshot when prop \`anchorElement\` and \`useAnchorWidth\` is passed 1`] = `
<body>
  <div
    alfa-portal-container=""
  >
    <div
      class="component"
      data-popper-escaped="true"
      data-popper-placement="left"
      data-popper-reference-hidden="true"
      style="z-index: 1000; width: 0px; position: absolute; left: 0px; top: 0px; right: 0px; transform: translate(0px, 0px);"
    >
      <div
        class="inner popoverInner"
      >
        <div
          class=""
        >
          <div
            aria-atomic="true"
            aria-live="assertive"
            class="component component"
            role="alert"
          >
            <div
              class="wrapper"
            >
              <div
                class="contentWrapper"
              >
                <div
                  class="content"
                >
                  <div
                    class="contentTitle"
                  >
                    <div
                      class="children"
                    >
                      text
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div
    style="width: 100px;"
  />
  <div />
</body>
`;

exports[`Toast Snapshots tests should math snapshot when prop \`anchorElement\` is passed 1`] = `
<body>
  <div
    alfa-portal-container=""
  >
    <div
      class="component"
      data-popper-escaped="true"
      data-popper-placement="left"
      data-popper-reference-hidden="true"
      style="z-index: 1000; position: absolute; left: 0px; top: 0px; right: 0px; transform: translate(0px, 0px);"
    >
      <div
        class="inner popoverInner"
      >
        <div
          class=""
        >
          <div
            aria-atomic="true"
            aria-live="assertive"
            class="component component"
            role="alert"
          >
            <div
              class="wrapper"
            >
              <div
                class="contentWrapper"
              >
                <div
                  class="content"
                >
                  <div
                    class="contentTitle"
                  >
                    <div
                      class="children"
                    >
                      text
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</body>
`;
